<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/travel_clas_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp" >

        <RadioButton
            android:id="@+id/rb_economy_travel_class"
            android:text="@string/economy_travel_class_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_premium_economy_travel_class"
            android:text="@string/premium_economy_travel_class_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_business_travel_class"
            android:text="@string/business_travel_class_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_first_travel_class"
            android:text="@string/first_travel_class_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:id="@+id/travel_class_save_button"
        android:text="@string/save_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="#e533b6"
        android:textColor="#FFFFFF"
        android:padding="6dp"/>

</RelativeLayout>