<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_from_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/tv_from_airport_text"
        android:textSize="16sp"
        android:ems="10"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_from_airport"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_to_airport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/tv_to_airport_text"
        android:textSize="16sp"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/view1"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_departure_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/tv_departure_date_text"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/tv_to_airport"
        android:layout_centerInParent="true"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_departure_date"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_return_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:text="@string/tv_return_date_text"
        android:textSize="16sp"
        android:layout_below="@+id/view2"
        android:layout_centerInParent="true"
        android:enabled="false"/>

    <Switch
        android:id="@+id/sw_has_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignBaseline="@+id/tv_return_date"
        android:layout_toRightOf="@+id/tv_return_date"/>

    <TextView
        android:id="@+id/tv_passengers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_passengers_text"
        android:ems="10"
        android:layout_below="@+id/tv_return_date"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/tv_passengers"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_travel_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_default_travel_class_text"
        android:ems="10"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/view3"
        android:layout_centerInParent="true" />

    <CheckBox
        android:id="@+id/cb_direct_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_direct_flight"
        android:ems="10"
        android:layout_below="@+id/tv_travel_class"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:checked="false"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/cb_direct_flight"
        android:layout_centerHorizontal="true"
        android:text="@string/search_button_text"
        android:background="#e533b6"
        android:textColor="#FFFFFF"
        android:padding="6dp"/>

</RelativeLayout>