<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_adults"
        android:text="@string/adults_passengers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_toLeftOf="@+id/save_button"
        android:layout_toStartOf="@+id/save_button"
        android:textSize="20sp"
        android:textColor="#14265c"/>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/tv_adults"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tv_children"
        android:text="@string/children_passengers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_adults"
        android:layout_alignEnd="@+id/tv_adults"
        android:layout_alignRight="@+id/tv_adults"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="#14265c"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/tv_children"
        android:layout_centerInParent="true"/>

    <TextView
        android:text="@string/infants_passengers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_children"
        android:layout_alignEnd="@+id/tv_adults"
        android:layout_alignRight="@+id/tv_adults"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textColor="#14265c"/>

    <Spinner
        android:id="@+id/adults_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view1"
        android:layout_toRightOf="@+id/save_button"
        android:layout_toEndOf="@+id/save_button"
        android:spinnerMode="dropdown"/>

   <Spinner
       android:id="@+id/children_spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/view1"
       android:layout_above="@+id/view2"
       android:layout_toRightOf="@+id/save_button"
       android:layout_toEndOf="@+id/save_button"
       android:spinnerMode="dropdown"/>

   <Spinner
       android:id="@+id/infants_spinner"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/view2"
       android:layout_toRightOf="@+id/save_button"
       android:layout_toEndOf="@+id/save_button"
       android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/save_button"
        android:text="@string/save_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="#e533b6"
        android:textColor="#FFFFFF"
        android:padding="6dp"/>

</RelativeLayout>